<resources>
    <string name="sensor_upload_url">https://app2.cbits.northwestern.edu/prImporter</string>
    <string name="json_config_url">http://mohrlab.northwestern.edu/robot/</string>
    <string name="app_name">Purple Robot</string>
    <string name="widget_title">Purple Robot Standard Widget</string>
    <string name="wide_widget_title">Purple Robot Widescreen Widget</string>
    <string name="toast_incorrect_password">Incorrect password. Please try again.</string>
    <string name="title_preference_triggers_screen">Trigger Configuration</string>
    <string name="title_preference_triggers_category">Available Triggers</string>
    <string name="title_enable_model">Enable Model</string>
    <string name="label_unknown_context">Unknown Context</string>
    <string name="menu_label_label">Add label</string>
    <string name="title_label_probe">Most Recent Label</string>
    <string name="title_snapshots">Snapshots</string>
    <string name="menu_snapshot_label">Snapshots</string>
    <string name="title_take_snapshot">Take snapshot</string>
    <string name="snapshot_user_initiated">User Initiated</string>
    <string name="snapshot_desc">%1$s (%2$d probes)</string>
    <string name="snapshot_single_desc">%1$s (1 probe)</string>
    <string name="snapshot_probe_count">%1$d probes</string>
    <string name="label_trigger_fire_now">Fire now</string>
    <string name="label_trigger_fire_now_desc">Execute trigger\'s action immediately</string>
    <string name="label_trigger_show_action">Inspect action</string>
    <string name="label_trigger_show_action_desc">Display the source code of the trigger\'s action</string>
    <string name="label_trigger_enable_action">Enable trigger</string>
    <string name="label_trigger_enable_action_desc">Disable trigger to skip future firings.</string>
    <string name="config_probes_category_label">Probes</string>
    <string name="config_triggers_category_label">Triggers</string>
    <string name="config_models_category_label">Learned Models</string>
	<string name="type_trigger_unknown">Unknown Trigger</string>
	<string name="type_trigger_probe">Probe Trigger</string>
    <string name="type_trigger_datetime">Time-Based Trigger</string>
    <string name="type_trigger_battery">Battery Level Trigger</string>
    <string name="label_trigger_battery_threshold">Battery Level Fire Threshold</string>
    <string name="label_trigger_battery_direction">Change Direction</string>
    <string name="label_trigger_battery_increasing">Battery Level Increasing</string>
    <string name="label_trigger_battery_decreasing">Battery Level Decreasing</string>
	<string name="label_trigger_last_fire">Last Fired</string>
	<string name="label_trigger_last_fire_never">Never</string>
	<string name="label_trigger_upcoming_fires">Upcoming Firings</string>
	<string name="label_trigger_upcoming_fires_none">No upcoming firings.</string>
	<string name="label_trigger_upcoming_fires_summary">%1$d scheduled firings</string>
	<string name="label_trigger_upcoming_fire_summary">1 scheduled firing</string>
    <string name="error_malformed_request">Malformed request. Please try again.</string>
    <string name="error_empty_payload">No payload to transmit.</string>
    <string name="error_unauthed_request">Authentication failed. Please try again.</string>
    <string name="activity_diagnostic_title">Diagnostics</string>
    <string name="user_id_label">User Identifier</string>
    <string name="user_id_placeholder">Unknown</string>
    <string name="ip_address_label">IP Address</string>
    <string name="ip_address_placeholder">Unknown</string>
    <string name="probe_status_label">Probe &amp; Sensor Status</string>
    <string name="probe_status_placeholder">Unknown</string>
    <string name="upload_status_label">HTTP Transmission Status</string>
    <string name="upload_status_placeholder">Unknown</string>
    <string name="last_upload_label">Most Recent Transmission</string>
    <string name="last_upload_placeholder">Unknown</string>
    <string name="email_diagnostic_subject">Purple Robot Diagnostic Settings</string>
    <string name="display_satellites_title">Satellites (%1$d)</string>
    <string name="display_satellite_label">Satellite %1$d</string>
    <string name="display_satellites_signal_ratio">Average Signal-to-Noise Ratio</string>
    <string name="display_satellite_id_label">Satellite Identifier</string>
    <string name="display_satellite_elevation_label">Elevation (degrees)</string>
    <string name="display_satellite_azimuth_label">Azimuth (degrees)</string>
    <string name="display_satellite_signal_label">Signal-to-Noise Ratio</string>
    <string name="display_satellite_ephemeris_label">Uses Ephemeris Data</string>
    <string name="display_satellite_no_ephemeris">False</string>
    <string name="display_satellite_has_ephemeris">True</string>
    <string name="display_satellite_almanac_label">Uses Almanac Data</string>
    <string name="display_satellite_no_almanac">False</string>
    <string name="display_satellite_has_almanac">True</string>
    <string name="display_location_coordinates_label">Coordinates (Latitude, Longitude)</string>
    <string name="display_location_coordinates">%1$f, %2$f</string>
    <string name="display_location_altitude_label">Altitude (Meters Above Sea Level))</string>
    <string name="display_location_accuracy_label">Accuracy (Meters)</string>
    <string name="display_location_bearing_label">Bearing (Degrees)</string>
    <string name="display_location_speed_label">Speed (Meters per Second)</string>
    <string name="display_location_provider_label">Location Provider</string>
    <string name="probe_status_enabled">Sensors &amp; probes enabled and collecting readings&#8230;</string>
    <string name="probe_status_disabled">Sensors &amp; probes disabled.</string>
    <string name="upload_status_enabled_wifi_only">Transmissions enabled when Wi-Fi is present.</string>
    <string name="upload_status_enabled_wifi_charging_only">Transmissions enabled when Wi-Fi is present and the device is plugged-in.</string>
    <string name="upload_status_enabled_charging_only">Transmissions enabled when the device is pluggged-in.</string>
    <string name="upload_status_enabled">Transmissions enabled.</string>
    <string name="upload_status_disabled">Transmissions disabled.</string>
    <string name="last_upload_format">%1$s (%2$d KB)</string>
    <string name="menu_email_label">E-Mail Diagnostics</string>
    <string name="menu_mark_time">Mark time points</string>
    <string name="title_mark_time">Mark Time Points</string>
    <string name="label_timestamp_name">Next Time Point Name</string>
    <string name="hint_timestamp_name">Enter time point name&#8230;</string>
    <string name="menu_email_timestamps">E-mail time points</string>
    <string name="menu_clear_timestamps">Clear time points</string>
    <string name="title_clear_timestamps">Clear time points?</string>
    <string name="message_clear_timestamps">Would you like to remove all the time points collected?\n\nThis action cannot be undone.</string>
    <string name="value_anonymous_timestamp">(Unnamed time point)</string>
    <string name="placeholder_timestamps">Enter a name and tap the button below to mark a time point.</string>
    <string name="title_clear_timestamp">Clear time point?</string>
    <string name="widget_test_title">This is an intentionally long string created to see if the widget will truncate the title.</string>
    <string name="widget_test_message">This is an intentionally long string created to see if the widget will truncate the message. Rinse and repeat: This is an intentionally long string created to see if the widget will truncate the message. This is an intentionally long string created to see if the widget will truncate the message. Rinse and repeat: This is an intentionally long string created to see if the widget will truncate the message. This is an intentionally long string created to see if the widget will truncate the message. Rinse and repeat: This is an intentionally long string created to see if the widget will truncate the message. This is an intentionally long string created to see if the widget will truncate the message. Rinse and repeat: This is an intentionally long string created to see if the widget will truncate the message. This is an intentionally long string created to see if the widget will truncate the message. Rinse and repeat: This is an intentionally long string created to see if the widget will truncate the message. This is an intentionally long string created to see if the widget will truncate the message. Rinse and repeat: This is an intentionally long string created to see if the widget will truncate the message. This is an intentionally long string created to see if the widget will truncate the message. Rinse and repeat: This is an intentionally long string created to see if the widget will truncate the message. This is an intentionally long string created to see if the widget will truncate the message. Rinse and repeat: This is an intentionally long string created to see if the widget will truncate the message. This is an intentionally long string created to see if the widget will truncate the message. Rinse and repeat: This is an intentionally long string created to see if the widget will truncate the message. This is an intentionally long string created to see if the widget will truncate the message. Rinse and repeat: This is an intentionally long string created to see if the widget will truncate the message. This is an intentionally long string created to see if the widget will truncate the message. Rinse and repeat: This is an intentionally long string created to see if the widget will truncate the message. This is an intentionally long string created to see if the widget will truncate the message. Rinse and repeat: This is an intentionally long string created to see if the widget will truncate the message. This is an intentionally long string created to see if the widget will truncate the message. Rinse and repeat: This is an intentionally long string created to see if the widget will truncate the message.</string>
    <string name="menu_settings_label">Settings</string>
    <string name="menu_upload_label">Upload data</string>
    <string name="menu_diagnostic_label">Diagnostics</string>
    <string name="label_unknown">Unknown</string>
    <string name="text_label_instruction">Please enter a label and value that describes this time.</string>
    <string name="text_label_label_placeholder">Name of label</string>
    <string name="text_label_value_placeholder">Value of label</string>
    <string name="pr_version_label">Purple Robot Version</string>
    <string name="pr_errors_label">Problems &amp; Warnings</string>
    <string name="pr_errors_none_label">No problems or warnings. System operation is normal.</string>
    <string name="pending_log_events_label">Pending Log Event Count</string>
    <string name="pending_log_events_placeholder">Event logging is currently disabled.</string>
    <string name="pending_files_label">Pending Uploads Count</string>
    <string name="pending_files_placeholder">Calculating file count&#8230;</string>
    <string name="available_sensors_label">Available Hardware Sensors</string>
	<string name="checkbox_remember_response">Remember this response.</string>
	<string name="menu_trigger_label">Triggers</string>
	<string name="installed_triggers_label">Installed Triggers</string>
    <string name="label_nfc_current_status">Current Status:</string>
    <string name="label_nfc_looking">Scanning for tags&#8230;</string>
    <string name="label_nfc_tag_id">Tag ID:</string>
    <string name="label_nfc_technologies">Technologies:</string>
    <string name="action_scan_nfc">Scan NFC tag</string>
    <string name="play_services_version_label">Google Play Services Version</string>
    <string name="pr_permissions_label">System Permissions</string>
</resources>