<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:robot="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/menu_diagnostic_item"
        android:title="@string/menu_diagnostic_label"
        robot:showAsAction="always"
        android:icon="@drawable/action_error" />
    <item android:id="@+id/menu_snapshot_item"
        android:title="@string/menu_snapshot_label"
        robot:showAsAction="never"
        android:icon="@drawable/action_snapshot" />
    <item android:id="@+id/menu_trigger_item"
        android:title="@string/menu_trigger_label"
        robot:showAsAction="never" />
    <item android:id="@+id/menu_upload_item"
        android:title="@string/menu_upload_label"
        robot:showAsAction="never" />
    <item android:id="@+id/menu_label_item"
        android:title="@string/menu_label_label"
        robot:showAsAction="never" />
    <item android:id="@+id/menu_mark_time"
        android:title="@string/menu_mark_time"
        robot:showAsAction="never" />
    <item android:id="@+id/menu_nfc_item"
        android:title="@string/action_scan_nfc"
        robot:showAsAction="never" />
    <item android:id="@+id/menu_settings_item"
        android:title="@string/menu_settings_label" 
        robot:showAsAction="never" />
</menu>