<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="horizontal"
	android:id="@+id/widget_root_layout"
	android:clickable="true"
	android:background="@drawable/appwidget_dark_bg">
	<ImageView
	    android:src="@drawable/ic_launcher"
	    android:layout_width="72dp"
	    android:layout_height="72dp"
	    android:layout_gravity="top"
	    android:scaleType="fitXY"
	    android:paddingTop="4dp"
	    android:paddingBottom="8dp"
	    android:paddingLeft="8dp"
	    android:paddingRight="8dp"
	    android:contentDescription="@string/app_name"
	    android:adjustViewBounds="true" />
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingTop="4dp"
	    android:paddingBottom="8dp"
	    android:paddingLeft="0dp"
	    android:paddingRight="8dp"
	    android:orientation="vertical">
	    <TextView
	        android:id="@+id/widget_title_text"
	        android:text="@string/widget_test_title"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@android:color/white"
	        android:textSize="20sp"
	        android:textStyle="bold"
	        android:lines="1"
	        android:singleLine="true"
		    android:paddingBottom="4dp"
	        android:ellipsize="end"
	        android:typeface="sans" />
   	    <TextView
	        android:id="@+id/widget_message_text"
	        android:text="@string/widget_test_message"
    	    android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:textSize="14sp"
	        android:ellipsize="end"
        	android:singleLine="false"
        	android:typeface="sans" />
	</LinearLayout>
</LinearLayout>
