<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="top"
            android:padding="10dp"
            android:gravity="top">
            <TextView
                android:id="@+id/text_label_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_label_instruction"
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <TextView
                android:id="@+id/text_label_context"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textIsSelectable="false"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <AutoCompleteTextView
                android:id="@+id/text_label_text"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:completionThreshold="1"
                android:hint="@string/text_label_label_placeholder" />
            <AutoCompleteTextView
                android:id="@+id/text_value_text"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:completionThreshold="1"
                android:hint="@string/text_label_value_placeholder" />
            <CheckBox android:id="@+id/check_remember_values"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:text="@string/checkbox_remember_response" />
            <LinearLayout android:id="@+id/layout_label"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_gravity="top"
                android:gravity="top">
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <ImageView
        android:layout_width="match_parent"
        android:layout_marginTop="0dp"
        android:layout_height="8dp"
        android:layout_gravity="top"
        android:background="@drawable/shadow" />
</FrameLayout>
