<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="64dp"
            android:paddingBottom="64dp">
            <View android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1" />
            <ProgressBar android:id="@+id/scanner"
                android:layout_width="200dp"
                android:layout_height="200dp" />
            <ImageView android:id="@+id/image_scanned"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:visibility="gone"
                android:src="@drawable/ic_scanned" />
            <View android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_weight="1" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textSize="18sp"
                android:gravity="right"
                android:layout_marginRight="8dp"
                android:text="@string/label_nfc_current_status" />
            <TextView android:id="@+id/label_status"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="match_parent"
                android:textSize="18sp"
                android:gravity="left"
                android:text="@string/label_nfc_looking" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textSize="14sp"
                android:layout_marginRight="8dp"
                android:gravity="right"
                android:text="@string/label_nfc_tag_id" />
            <TextView android:id="@+id/label_tag_id"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:gravity="left"
                android:text="@string/label_unknown" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:textSize="14sp"
                android:layout_marginRight="8dp"
                android:gravity="right"
                android:text="@string/label_nfc_technologies" />
            <TextView android:id="@+id/label_tag_technologies"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:gravity="left"
                android:singleLine="false"
                android:ellipsize="end"
                android:text="@string/label_unknown" />
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_marginTop="0dp"
        android:layout_height="8dp"
        android:layout_gravity="top"
        android:background="@drawable/shadow" />
</FrameLayout>
